--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                         <div class="single-service">
                             <span></span>
                             <div class="service-icon"> <i class="fa fa-plug"></i> </div>
-                            <h4><a href="#">API Developmen</a></h4>
+                            <h4><a href="#">API Development</a></h4>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
