--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="img/profile-pic.jpg" alt="Anamul Hasan" />
+                        <img src="img/myprofile1.jpg" alt="Anamul Hasan" />
                     </div>
 
                     <div class="col-md-12">
-                        <h1>I'm Idris Zafrullah</h1>
+                        <h1 style="color: #AF9483;">I'm Idris Zafrullah</h1>
                     </div>
 
                     <div class="col-md-12">
                         <p>Full-stack Developer, Back-end Developer, Front-end Developer, Mobile App Developer, Web Developer, DevOps Engineer</p>
-                        <h2></h2>
+                        <h2 style="color: #AF9483;"></h2>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 col-lg-4">
-                        <img class="img-fluid" src="img/about-us.jpg" />
+                        <img class="img-fluid" src="img/myprofile1.jpg" />
                     </div>
 
                     <div class="col-md-6 col-lg-8">
@@ -468,20 +468,20 @@
                 <i class="fa fa-4x fa-quote-left"></i>
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
-                        <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
+                        <img src="img/Tao.jpeg" class="testimonial-img" alt="">
                         <h3>Abigail Shaw</h3>
                         <h4>Greenhouse worker</h4>
                         <p>
-                            Duis elementum consequat feugiat. In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus malesuada fames turpis egestas. 
+                            I have worked directly with Zafrullah in a capacity of mentorship and. He is quite enthusiastic and learns very quickly. An easy recommend from me.
                         </p>
                     </div>
 
                     <div class="testimonial-item">
-                        <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
+                        <img src="img/Tao.jpeg" class="testimonial-img" alt="">
                         <h3>Jake Gregory</h3>
                         <h4>News correspondent</h4>
                         <p>
-                            Curabitur bibendum euismod augue, eu rutrum metus consectetur id. Duis lacus erat, gravida laoreet molestie eget, congue in erat.
+                            Zafrullah displays a remarkable passion for design and a keen eye for detail. Of all the times I mentored him, his commitment to excellence and creative flair make her a standout candidate for any Product Design team.
                         </p>
                     </div>
 
