--- a/index.html
+++ b/index.html
@@ -467,30 +467,41 @@
             <div class="container">
                 <i class="fa fa-4x fa-quote-left"></i>
                 <div class="owl-carousel testimonials-carousel">
+                    
                     <div class="testimonial-item">
                         <img src="img/Tao.jpeg" class="testimonial-img" alt="">
-                        <h3>Abigail Shaw</h3>
-                        <h4>Greenhouse worker</h4>
+                        <h3>Idris Taofik</h3>
+                        <h4>Pruduct Manager</h4>
                         <p>
                             I have worked directly with Zafrullah in a capacity of mentorship and. He is quite enthusiastic and learns very quickly. An easy recommend from me.
                         </p>
                     </div>
 
                     <div class="testimonial-item">
-                        <img src="img/Tao.jpeg" class="testimonial-img" alt="">
-                        <h3>Jake Gregory</h3>
-                        <h4>News correspondent</h4>
+                        <img src="img/IMG_6308 copy (1).JPG" class="testimonial-img" alt="">
+                        <h3>Shodeko Ihsaan</h3>
+                        <h4>UI/UX Developer</h4>
                         <p>
-                            Zafrullah displays a remarkable passion for design and a keen eye for detail. Of all the times I mentored him, his commitment to excellence and creative flair make her a standout candidate for any Product Design team.
+                            Zafrullah is a highly dedicated co-worker who consistently completes tasks he undertakes. He excels in active listening and demonstrates a quick learning ability. As his co-worker, I share these commendable qualities, contributing to a productive and collaborative work environment.
+                        </p>
+                    </div>
+
+                    
+                    <div class="testimonial-item">
+                        <img src="img/user.png" class="testimonial-img" alt="">
+                        <h3>Khalil Olumide</h3>
+                        <h4>Medical Consultant</h4>
+                        <p>
+                            Zafrullah is commendable for embracing good advice, staying cool-headed, and actively listening—a valuable combination that enhances effectiveness in various situations.
                         </p>
                     </div>
 
                     <div class="testimonial-item">
-                        <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
-                        <h3>Maddison Hughes</h3>
-                        <h4>Social worker</h4>
+                        <img src="img/Husseina.jpg" class="testimonial-img" alt="">
+                        <h3>Husseina Ibrahim</h3>
+                        <h4>Front-End Developer</h4>
                         <p>
-                            Nulla at luctus ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim quam, interdum nec turpis at, volutpat ultricies ligula.
+                            Zafrullah displays a remarkable passion for design and a keen eye for detail. Of all the times I worked with him, his commitment to excellence and creative flair make him a standout candidate for any Product Design team.
                         </p>
                     </div>
                 </div>
