--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             // Function to handle file download
             function downloadFile() {
               // Specify the file path relative to the project
-              const filePath = './MyCv.pdf'; // Update with your actual file path
+              const filePath = './ZAFRULLAHRESUME.pdf'; // Update with your actual file path
         
               // Create a link element
               const link = document.createElement('a');
