--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
               link.href = filePath;
         
               // Specify the download attribute with the desired file name
-              link.download = 'ZAFRULLAHIDRIS_CV'; // Update with your desired file name
+              link.download = 'ZAFRULLAHIDRIS'; // Update with your desired file name
         
               // Append the link to the document
               document.body.appendChild(link);
