--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio End -->
+        <!-- Portfolio End P-->
 
         <!-- Testimonials Start -->
         <div class="testimonials" id="testimonials">
