.pdf added to download link

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
               link.href = filePath;
         
               // Specify the download attribute with the desired file name
-              link.download = 'ZAFRULLAHIDRIS'; // Update with your desired file name
+              link.download = 'ZAFRULLAHIDRIS.pdf'; // Update with your desired file name
         
               // Append the link to the document
               document.body.appendChild(link);
