--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Clark - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Portfolio.Zafrullah.Idris</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -56,7 +56,7 @@
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
 						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/myprofile2.png);">
+							style="background-image:url(images/profile1.png);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
@@ -79,7 +79,7 @@
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
 						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/myprofile1.png);">
+							style="background-image:url(images/profile4.png);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate"
@@ -104,7 +104,7 @@
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/myprofile1.png);">
+							style="background-image:url(images/profile4.jpg);">
 						</div>
 					</div>
 				</div>
@@ -595,7 +595,7 @@
 					</div>
 
 					<div class="col-md-6 d-flex">
-						<div class="img" style="background-image: url(images/about.jpg);"></div>
+						<div class="img" style="background-image: url(images/profile4.jpg);"></div>
 					</div>
 				</div>
 			</section>
