--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@
 				<!-- <div class="col-md-6"> -->
 				<div class="resume-wrap ftco-animate">
 					<span class="date">Jun 2024 to Present</span>
-					<h2>Backend Developer</h2>
+					<h2>Software Developer</h2>
 					<span class="position">Sterling Bank, Lagos, NG</span>
-					<p class="mt-4">At Sterling Bank, I managed and processed large datasets within the core banking
+					<p class="mt-4">Automated and optimized large datasets within the core banking
 						system, ensuring data accuracy and integrity by extracting and reconciling data from
-						extensive files. I successfully built a robust and secure authentication system by utilising
+						extensive files reducing manual process by 90%. I successfully built a robust and secure
+						authentication system by utilising
 						VPN access with Active Directory (AD) via the LDAP communication protocol, enhancing
 						security and user verification processes. I implemented comprehensive logging mechanisms for
 						database records, monitored logged data, and resolved critical issues to maintain system
@@ -164,10 +165,10 @@
 						clear communication and collaboration with the team to deliver a successful system.</p>
 				</div>
 				<div class="resume-wrap ftco-animate">
-					<span class="date">Jun 2022 to Sep 2023</span>
+					<span class="date">Feb 2022 to Sep 2023</span>
 					<h2>Fullstack Developer</h2>
 					<span class="position">Sysbeams Nig. Ltd. Lagos, NG</span>
-					<p class="mt-4">At Sysbeams, I developed an API gateway using the Ocelot library, applying the
+					<p class="mt-4">Developed an API gateway using the Ocelot library, applying the
 						reverse proxy pattern for efficient routing within a microservice architecture. I
 						implemented indexing and caching strategies along with load balancing techniques to optimize
 						performance, significantly reducing server load and improving system response times. As a
@@ -175,29 +176,29 @@
 						I demonstrated strong communication and presentation skills during stand-ups and sprint
 						reviews, effectively supporting the Agile Scrum methodology.</p>
 				</div>
-				<div class="resume-wrap ftco-animate">
-					<span class="date">Jan 2022 to May 2022</span>
-					<h2>.NET Developer Internship</h2>
-					<span class="position">Sysbeams Nig. Ltd. Abeokuta, NG</span>
-					<p class="mt-4">During my internship as a .NET Developer at Sysbeams, I gained hands-on
-						experience working closely with senior developers. I honed my skills in C# and ASP.NET,
-						contributing to both front-end and back-end tasks. I assisted with feature design, algorithm
-						problem-solving, troubleshooting, and database management, deepening my understanding of
-						best practices and the .NET framework.</p>
-				</div>
 				<!-- </div> -->
 
 				<!-- <div class="col-md-6"> -->
 				<div class="resume-wrap ftco-animate">
-					<span class="date">Aug 2021 to Oct 2021</span>
-					<h2>Assistant Instructor (Intern)</h2>
+					<span class="date">Jan 2023 to Apr 2023</span>
+					<h2>Assistant Instructor</h2>
 					<span class="position">Code Learners Hub, Abeokuta, NG</span>
-					<p class="mt-4">During my internship at Code Learners Hub, I supervised summer coaching
+					<p class="mt-4">Supervised summer coaching
 						students, guiding
 						them through programming concepts and fundamentals. I provided hands-on instruction in
 						programming languages, focusing on .NET and basic C# concepts, ensuring students gained a
 						solid understanding of the material. My role involved assisting with course planning,
 						delivering lessons, and offering support to students in their learning journey.</p>
+				</div>
+				<div class="resume-wrap ftco-animate">
+					<span class="date">Jun 2022 to Dec 2022</span>
+					<h2>Junior Software Engineer</h2>
+					<span class="position">Code Learners Hub Abeokuta, NG</span>
+					<p class="mt-4">Gained hands-on
+						experience working closely with senior developers. I honed my skills in C# and ASP.NET,
+						contributing to both front-end and back-end tasks. I assisted with feature design, algorithm
+						problem-solving, troubleshooting, and database management, deepening my understanding of
+						best practices and the .NET framework.</p>
 				</div>
 				<!-- </div> -->
 			</div>
@@ -270,7 +271,7 @@
 							<i class="fa fa-robot"></i>
 						</span>
 						<div class="desc">
-							<h3 class="mb-5">LLM Development</h3>
+							<h3 class="mb-5">LLM integration</h3>
 						</div>
 					</a>
 				</div>
@@ -291,33 +292,20 @@
 			<div class="row">
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>.NET Framework</h3>
-						<div class="progress">
-							<div class="progress-bar color-1" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="progress-wrap ftco-animate">
 						<h3>C# Language</h3>
 						<div class="progress">
 							<div class="progress-bar color-2" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Database Design</h3>
+						<h3>.NET Framework</h3>
 						<div class="progress">
-							<div class="progress-bar color-3" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+							<div class="progress-bar color-1" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
 							</div>
 						</div>
 					</div>
@@ -328,18 +316,37 @@
 						<div class="progress">
 							<div class="progress-bar color-5" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
 							</div>
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
 						<h3>.NET MAUI</h3>
 						<div class="progress">
 							<div class="progress-bar color-5" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>CI/CD</h3>
+						<div class="progress">
+							<div class="progress-bar color-6" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+								aria-valuemax="100" style="width:100%">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Database Design</h3>
+						<div class="progress">
+							<div class="progress-bar color-3" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+								aria-valuemax="100" style="width:100%">
 							</div>
 						</div>
 					</div>
@@ -350,7 +357,6 @@
 						<div class="progress">
 							<div class="progress-bar color-5" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
 							</div>
 						</div>
 					</div>
@@ -361,40 +367,6 @@
 						<div class="progress">
 							<div class="progress-bar color-5" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="progress-wrap ftco-animate">
-						<h3>DevOps</h3>
-						<div class="progress">
-							<div class="progress-bar color-6" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-								aria-valuemax="100" style="width:100%">
-								<span>100%</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="progress-wrap ftco-animate">
-						<h3>Flutter</h3>
-						<div class="progress">
-							<div class="progress-bar color-5" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-								aria-valuemax="100" style="width:90%">
-								<span>90%</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="progress-wrap ftco-animate">
-						<h3>Java (Spring Boot)</h3>
-						<div class="progress">
-							<div class="progress-bar color-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-								aria-valuemax="100" style="width:70%">
-								<span>70%</span>
 							</div>
 						</div>
 					</div>
@@ -418,7 +390,8 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="#blog-section" class="block-20" style="background-image: url('images/Online-banking.jpg');">
+						<a href="#blog-section" class="block-20"
+							style="background-image: url('images/Online-banking.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -426,7 +399,8 @@
 									<span class="mr-2">June 2024</span>
 								</p>
 							</div>
-							<h3 class="heading"><a href="#blog-section">E-BANKING SETTLEMENT & RECONCILIATION SOFTWARE</a>
+							<h3 class="heading"><a href="#blog-section">E-BANKING SETTLEMENT & RECONCILIATION
+									SOFTWARE</a>
 							</h3>
 							<p>A small river named Duden flows by their place and supplies it with the necessary
 								regelialia.</p>
@@ -435,7 +409,8 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="#blog-section" class="block-20" style="background-image: url('images/online-quiz-software.PNG');">
+						<a href="#blog-section" class="block-20"
+							style="background-image: url('images/online-quiz-software.PNG');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -452,7 +427,8 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="#blog-section" class="block-20" style="background-image: url('images/holly-quran-1.PNG');">
+						<a href="#blog-section" class="block-20"
+							style="background-image: url('images/holly-quran-1.PNG');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -554,19 +530,19 @@
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box p-4 text-center">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-paper-plane"></span>
+							<span class="icon-whatsapp"></span>
 						</div>
-						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:idreeszafrullah@gmail.com">idreeszafrullah@gmail.com</a></p>
+						<h3 class="mb-4">WhatsApp</h3>
+						<p><a href="https://wa.me/+2349011914380?text=">+234-901-191-4380</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box p-4 text-center">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-globe"></span>
+							<span class="icon-paper-plane"></span>
 						</div>
-						<h3 class="mb-4">Website</h3>
-						<p><a href="https://zafrullahidris.github.io/">zafrullahidris.github.io</a></p>
+						<h3 class="mb-4">Email Address</h3>
+						<p><a href="mailto:idreeszafrullah@gmail.com">idreeszafrullah@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
@@ -584,8 +560,8 @@
 								<input type="text" class="form-control" placeholder="Subject" disabled>
 							</div>
 							<div class="form-group">
-								<textarea name="" id="" cols="30" rows="7" class="form-control"
-									placeholder="Message" disabled></textarea>
+								<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"
+									disabled></textarea>
 							</div>
 							<div class="form-group">
 								<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" disabled>
@@ -612,8 +588,10 @@
 						<p>Performance-oriented and committed graduate adept in efficiently utilizing available
 							resources in completing assigned tasks and achieved commendations in this regard.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="https://www.linkedin.com/in/zaf-idris"><span class="icon-linkedin"></span></a></li>
-							<li class="ftco-animate"><a href="https://wa.me/+2349011914380?text="><span class="icon-whatsapp"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.linkedin.com/in/zaf-idris"><span
+										class="icon-linkedin"></span></a></li>
+							<li class="ftco-animate"><a href="https://wa.me/+2349011914380?text="><span
+										class="icon-whatsapp"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 						</ul>
 					</div>
@@ -639,7 +617,8 @@
 										NG</span></li>
 								<li><a href="#"><span class="icon icon-phone"></span><span
 											class="text">+234-901-191-4380</span></a></li>
-								<li><a href="mailto:idreeszafrullah@gmail.com"><span class="icon icon-envelope"></span><span
+								<li><a href="mailto:idreeszafrullah@gmail.com"><span
+											class="icon icon-envelope"></span><span
 											class="text">idreeszafrullah@gmail.com</span></a></li>
 							</ul>
 						</div>
@@ -676,7 +655,7 @@
 		// Function to handle file download
 		function downloadFile() {
 			// Specify the file path relative to the project
-			const filePath = './ZAFRULLAH_IDRIS_RESUME.pdf'; // Update with your actual file path
+			const filePath = './Idris_Zafrullah_Software_Engineering_Resume.pdf'; // Update with your actual file path
 
 			// Create a link element
 			const link = document.createElement('a');
@@ -685,7 +664,7 @@
 			link.href = filePath;
 
 			// Specify the download attribute with the desired file name
-			link.download = 'ZAFRULLAHIDRIS.pdf'; // Update with your desired file name
+			link.download = 'Idris_Zafrullah_Software_Engineering_Resume.pdf'; // Update with your desired file name
 
 			// Append the link to the document
 			document.body.appendChild(link);
